--- a/DigitallyPowerful/appsettings.json
+++ b/DigitallyPowerful/appsettings.json
@@ -9,9 +9,11 @@
     "Default": "server=sg2nlmysql59plsk.secureserver.net;port=3306;database=ph11260600853_;uid=DIGPOWERPROD;password=Tech@1234;"
   },
   "Mail": {
-    "EmailAddress": "digitallypowerfulservices@gmail.com",
-    "Password": "Dig@1234",
+    "EmailAddress": "contact@digitallypowerful.com",
+    "Password": "Prem@1234",
     "ReceiverEmail": "premkarthy@gmail.com",
-    "ContactEmail" :  "contact@digitallypowerful.com"
+    "ContactEmail": "contact@digitallypowerful.com",
+    "Host": "relay-hosting.secureserver.net",
+    "Port": 25
   }
 }
